<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pozadinaSvetla2"
    android:fitsSystemWindows="true"
    tools:context=".activity.ZakazivanjeVoznjeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linnearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/pozadinanova"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:theme="@style/ThemeOverlay.AppCompat"
                app:navigationIcon="@drawable/ic_menu">
                <!--       <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

              <ImageView
                    android:id="@+id/imageMenu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_menu"
                    android:tint="@color/colorPrimaryDark" /> -->
            </androidx.appcompat.widget.Toolbar>

            <!--   </LinearLayout> -->

            <!--    <fragment
                android:id="@+id/navHostFragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultNavHost="true"
                ></fragment> -->

            <EditText
                android:id="@+id/inputStartPlaceSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bojaPozadina"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/pocetnaLokacija"
                android:inputType="textPostalAddress"
                android:textColor="@color/bojaPozadina"
                android:textColorHint="@color/bojaPozadinaTamnaTransparentna" />

            <EditText
                android:id="@+id/inputEndPlaceSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bojaPozadina"
                android:hint="@string/krajnjaLokacija"
                android:inputType="textPostalAddress"
                android:textColor="@color/bojaPozadina"
                android:textColorHint="@color/bojaPozadinaTamnaTransparentna" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/places_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            </androidx.recyclerview.widget.RecyclerView>

                    <fragment
                        android:id="@+id/mapView"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="450sp" />



            <!--     <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
             android:id="@+id/mapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="wrap_content"
         map:mapType="normal"
                android:layout_height="450sp"-->

            <CheckBox
                android:id="@+id/checkBoxDodaci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dodaci"
                android:buttonTint="@color/bojaPozadina"
                android:textColor="@color/bojaPozadina"
                android:textColorLink="@color/bojaPozadina" />

            <LinearLayout
                android:id="@+id/layoutDodaci"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="invisible">

                <CheckBox
                    android:id="@+id/checkBoxEkoloskoVozilo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/bojaPozadina"
                    android:textColor="@color/bojaPozadina"
                    android:textColorLink="@color/bojaPozadina"
                    android:text="@string/dodaciEkoloskoVozilo" />

                <CheckBox
                    android:id="@+id/checkBoxSedisteZaBebe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/bojaPozadina"
                    android:textColor="@color/bojaPozadina"
                    android:textColorLink="@color/bojaPozadina"
                    android:text="@string/dodaciSedisteBebe" />

                <CheckBox
                    android:id="@+id/checkBoxDodatnaSedista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/bojaPozadina"
                    android:textColor="@color/bojaPozadina"
                    android:textColorLink="@color/bojaPozadina"
                    android:text="@string/dodaciSedista" />

                <CheckBox
                    android:id="@+id/checkBoxStraniJezik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/bojaPozadina"
                    android:textColor="@color/bojaPozadina"
                    android:textColorLink="@color/bojaPozadina"
                    android:text="@string/dodaciJezik" />

                <LinearLayout
                    android:id="@+id/layoutJezici"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bojaPozadina"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/checkBoxEnglish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/bojaPozadina"
                        android:textColor="@color/bojaPozadina"
                        android:textColorLink="@color/bojaPozadina"
                        android:layout_weight="1"
                        android:text="@string/engleski" />

                    <CheckBox
                        android:id="@+id/checkBoxFrench"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/bojaPozadina"
                        android:textColor="@color/bojaPozadina"
                        android:textColorLink="@color/bojaPozadina"
                        android:text="@string/francuski" />

                    <CheckBox
                        android:id="@+id/checkBoxRussian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/bojaPozadina"
                        android:textColor="@color/bojaPozadina"
                        android:textColorLink="@color/bojaPozadina"
                        android:text="@string/ruski" />

                    <CheckBox
                        android:id="@+id/checkBoxSpanish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/bojaPozadina"
                        android:textColor="@color/bojaPozadina"
                        android:textColorLink="@color/bojaPozadina"
                        android:text="@string/spanski" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonProcenaVoznje"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/button_voznja"
                android:text="@string/procenaVoznje"
                android:textColor="@color/bojaPozadina" />

            <TextView
                android:id="@+id/labelDistanca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:textColor="@color/bojaPozadina"
                tools:visibility="gone"/>

            <TextView
                android:id="@+id/labelTrajanje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:textColor="@color/bojaPozadina"
                tools:visibility="gone"/>

            <TextView
                android:id="@+id/labelCena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bojaPozadina"
                android:layout_marginLeft="5sp"
                tools:visibility="gone"/>

            <Button
                android:id="@+id/buttonNaruci"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_voznja"
                android:textColor="@color/bojaPozadina"
                android:text="@string/zakaziVoznju"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:foregroundGravity="right"
        android:background="@color/bojaPozadinaSvetla"
        app:headerLayout="@layout/navigacija_naslov"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>