<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="#F8D56C"
    tools:context=".activity.PodaciActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="60sp"
            android:layout_height="60sp"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/labelBack"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonBack"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/buttonPregled"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_toRightOf="@id/buttonBack"
            app:srcCompat="@drawable/ic_assignment"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/labelPregled"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPregled"
            android:layout_toRightOf="@id/labelBack"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/pregled" />

        <ImageButton
            android:id="@+id/buttonExit"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_toRightOf="@id/buttonPregled"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/labelIzlaz"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonExit"
            android:layout_toRightOf="@id/labelPregled"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/izlaz" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout"
        android:background="#00FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:orientation="vertical">



            <TextView
                android:id="@+id/labelNaslov"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/naslov"
                android:textSize="23sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelPocetnaAdresa"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:gravity="center_vertical"
                    android:text="@string/adresa"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerAdrese"
                    android:layout_width="350sp"
                    android:layout_height="50sp"
                    android:layout_below="@id/labelPocetnaAdresa"
                    android:spinnerMode="dropdown"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/buttonAdd"
                    android:layout_width="40sp"
                    android:layout_height="50sp"
                    android:layout_below="@id/labelPocetnaAdresa"
                    android:layout_toRightOf="@id/spinnerAdrese"
                    android:background="#00FFFFFF"
                    android:src="@android:drawable/ic_input_add"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/inputPocetnaAdresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spinnerAdrese"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/labelKrajnjaAdresa"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_below="@id/inputPocetnaAdresa"
                    android:layout_marginTop="10sp"
                    android:gravity="center_vertical"
                    android:text="@string/ulica"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerUlice"
                    android:layout_width="350sp"
                    android:layout_height="50sp"
                    android:layout_below="@id/labelKrajnjaAdresa"
                    android:gravity="center_horizontal"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/buttonAdd2"
                    android:layout_width="40sp"
                    android:layout_height="50sp"
                    android:layout_below="@id/labelKrajnjaAdresa"
                    android:layout_toRightOf="@id/spinnerUlice"
                    android:background="#00FFFFFF"
                    android:src="@android:drawable/ic_input_add"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/inputKrajnjaAdresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spinnerUlice"
                    android:visibility="invisible" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelDatum"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:text="@string/datum"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputDatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/labelVreme"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:gravity="center_vertical"
                android:text="@string/vreme"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputVreme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonOcena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="50sp"
                android:text="@string/potvrdi" />

            <TextView
                android:id="@+id/labelVoznja"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:gravity="center_horizontal|center_vertical" />

            <TextView
                android:id="@+id/labelPoruka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>